@@ -738,6 +738,14 @@ $settings['discuss.session_ttl']->fromArray(array(
     'namespace' => 'discuss',
     'area' => 'Sessions',
 ),'',true,true);
+$settings['discuss.strip_remaining_bbcode']= $modx->newObject('modSystemSetting');
+$settings['discuss.strip_remaining_bbcode']->fromArray(array(
+    'key' => 'discuss.strip_remaining_bbcode',
+    'value' => '0',
+    'xtype' => 'modx-combo-boolean',
+    'namespace' => 'discuss',
+    'area' => 'Sessions',
+),'',true,true);
 
 /*
 $settings['discuss.']= $modx->newObject('modSystemSetting');
